# Programming_homeworks_1

./: CMakeLists.txt
Final/: final_task_1.c  final_task_2.c
Homework1/: task_1.c  task_2.c  task_3.c  task_4.c  task_5.c
Homework2/: dictionary.c  dictionary.h  list.c  list.h  task_2.1.c  task_2.2.c
Homework3/: binary_number.c  binary_number.h  task_3.1.c  task_3.2.c  task_3.3.c
Homework4/: mergeSort.c  mergeSort.h  task_4.1.c  task_4.2.md
Homework5/: AVL_tree.c  AVL_tree.h  list.c  list.h  report.md  task_5.1.c  task_5.2.c  task_5.3.c  values.h
Homework6/: AVL_tree.c  AVL_tree.h  dictionary.c  dictionary.h  hash_map.c  hash_map.h  list.c  list.h  report.xlsx  task_6.1.c  task_6.2.c  task_6.4.c  values.c  values.h
Homework7/: heap.c  heap.h  task_7.1.c
Homework8/: automaton.c  automaton.h  automaton_description.txt  list.h  task_8.2.c
Retest1/: retest_task_1.3.c
Retest2/: AVL_tree.c  AVL_tree.h  retest_2.2.c  retest_2.3.c  retest_2.5.c
Testwork1/: list.c  list.h  test_task_1.c  test_task_2.c  vector.c  vector.h
Testwork2/: mergeSort.c  test_task_2.1.c  test_task_2.2.c  test_task_2.3.c
